# AdventOfCode

./: .gitignore  Cargo.toml  README.md  pom.xml
src/main/2024/kotlin/d01/: Main.kt
src/main/2024/kotlin/d02/: Main.kt
src/main/2024/kotlin/d03/: Main.kt
src/main/2024/rust/d01/: main.rs
src/main/kotlin/d01/: Main.kt
src/main/rust/d01/: main.rs
